# riley-vapi

./: .gitignore  README.md  agent_desc.txt  pyproject.toml  start.sh
.veris/: .dockerignore  Dockerfile.sandbox  veris.yaml
app/: README.md  db.py  main.py  reporting.py  tools.py
db/: README.md  init.sql
docs/: vapi-architecture.md
